lox-tests/tests/assignment/infix_operator.stderr
ERROR: Invalid assignment target
 --> 3:1
  |
3 | a + b = "value"; // Error at '=': Invalid assignment target.
  | ^-----^
